fix: adjust overflow handling and touch gesture settings for better mobile experience

--- a/style.css
+++ b/style.css
@@ -483,8 +483,7 @@ body.touch-device .custom-cursor {
    ========================================================================== */
 @media (max-width: 992px) {
     .ordner-inhalt[data-content="startseite"].active,
-    .ordner-inhalt[data-content="about"].active
-     {
+    .ordner-inhalt[data-content="about"].active {
         overflow: hidden;
          overscroll-behavior: contain;
 
@@ -512,11 +511,7 @@ body.touch-device .custom-cursor {
     
     .info-wrapper {
         transform: translateY(calc(100% - 1rem));
-        overflow: hidden;
-         overscroll-behavior: contain;
-
-        /* Deaktiviert Touch-Gesten wie Wischen und Zoomen komplett */
-        touch-action: none;
+      
     }
     
     .info-paper {
@@ -528,14 +523,6 @@ body.touch-device .custom-cursor {
         /* Deaktiviert Touch-Gesten wie Wischen und Zoomen komplett */
         touch-action: none;
     }
-    .body {
-        overflow: hidden;
-         overscroll-behavior: contain;
-
-        /* Deaktiviert Touch-Gesten wie Wischen und Zoomen komplett */
-        touch-action: none;
-    }
-
     
     .info-toggle-button {
         height: 25px;
@@ -545,6 +532,14 @@ body.touch-device .custom-cursor {
         border-top-right-radius: 16px;
         box-shadow: 0 -12px 15px -3px #898989;
          -webkit-tap-highlight-color: transparent;
+    }
+
+    .body {
+        overflow: hidden;
+         overscroll-behavior: contain;
+
+        /* Deaktiviert Touch-Gesten wie Wischen und Zoomen komplett */
+        touch-action: none;
     }
 
     .info-toggle-button::before, .info-toggle-button::after {
